<resources>
    <!-- App Detail -->
    <string name="app_name">Mafia</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mafia</string>
    <string name="nav_header_subtitle">hpar.dev@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Navigation Drawer -->
    <string name="menu_home">Home</string>
    <string name="menu_rules">Rules</string>
    <string name="menu_stats">Statistics</string>
    <string name="menu_share_stats">Share Statistics</string>
    <string name="menu_settings">Settings</string>

    <!-- Home -->
    <string name="home_title">@string/nav_header_title</string>

    <!-- Rules -->
    <string name="rules_title">@string/menu_rules</string>
    <string name="rules_gameplay">Gameplay</string>
    <string name="rules_roles">Roles</string>

    <!-- Statistics -->
    <string name="stats_title">@string/menu_stats</string>

    <!-- Share Statistics -->
    <string name="share_stats_title">@string/menu_share_stats</string>

    <!-- Settings -->
    <string name="settings_title">@string/menu_settings</string>
</resources>
