<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:checked="true"
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_games_black_24dp"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/nav_rules"
            android:icon="@drawable/ic_subject_black_24dp"
            android:title="@string/menu_rules"/>
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_show_chart_black_24dp"
            android:title="@string/menu_stats"/>
        <item
            android:id="@+id/nav_share_stats"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_share_stats"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings"/>
    </group>

</menu>
